styles.css
body {
    flex-direction: column;
    font-family: 'Arial', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #f0f0f0;
}

.game-board {
    width: 320px;
    height: 320px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

.card {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #333;
    color: #fff;
    font-size: 2em;
    cursor: pointer;
}

#startGameBtn {
    background-color: #007BFF;
    color: #fff;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-bottom: 10px;
    font-size: 1.2em;
}

#startGameBtn:hover {
    background-color: #0056b3;
}

#timer {
    font-size: 1.5em;
    margin-bottom: 10px;
}

/* Toggle Switch Styles */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: 0.4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: 0.4s;
}

input:checked + .slider {
    background-color: #2196F3;
}

input:checked + .slider:before {
    transform: translateX(26px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

/* Dark Mode Styles */
body.dark-mode {
    background-color: #333;
    color: #f0f0f0;
}

.game-board.dark-mode .card {
    background-color: #f0f0f0;
    color: #333;
}

#startGameBtn.dark-mode {
    background-color: #0056b3;
    color: #f0f0f0;
}

#startGameBtn.dark-mode:hover {
    background-color: #003d7a;
}

